hard-gists/e3556f0089e89970bf9b/run.log
=== Docker Run Log for e3556f0089e89970bf9b ===
Started at: Mi 29. Okt 20:41:33 CET 2025

[2025-10-29 20:41:34] START: Running container for e3556f0089e89970bf9b
[2025-10-29 20:41:34] SUCCESS: Container 9bd94dcbe900db7b77a194f3d120368fe66f6ac56c69ee337afe86327915f25c started for e3556f0089e89970bf9b
=== Container logs for e3556f0089e89970bf9b ===
  File "/snippet.py", line 362
    print "Train Epoch  {} : loss1  {} : loss2  {} : loss3  {} : loss4  {} : Accuracy  {} ".format(epoch,mean_loss1,mean_loss2,mean_loss3,mean_loss4,mean_accuracy)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for e3556f0089e89970bf9b ===
[2025-10-29 20:41:36] INFO: Container 9bd94dcbe900db7b77a194f3d120368fe66f6ac56c69ee337afe86327915f25c has stopped
